# quantcoder-plugin

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NOTICE  PRODUCTION_SETUP.md  README.md  fix-branches-and-tags.sh  pyproject.toml  requirements-lock.txt  requirements.txt
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: copilot-instructions.md
commands/: quantcoder-backtest.md  quantcoder-generate.md  quantcoder-search.md  quantcoder-setup.md  quantcoder-validate.md
docs/: AGENTIC_PROCESS_EXPLAINED.md  AGENTIC_PROCESS_NOTION.html  AGENTIC_WORKFLOW.md  ARCHITECTURE.md  ARCHITECTURE_ADAPTATIONS.md  ARCHITECTURE_V3_MULTI_AGENT.md  AUTONOMOUS_MODE.md  LIBRARY_BUILDER.md  NEW_FEATURES_V4.md  QUANTCODER_GUIDE.md  VERSIONS.md
quantcoder/: __init__.py  chat.py  cli.py  config.py  editor.py  logging_config.py  mcp_stdio.py
quantcoder/agents/: __init__.py  alpha_agent.py  base.py  coordinator_agent.py  risk_agent.py  strategy_agent.py  universe_agent.py
quantcoder/autonomous/: __init__.py  database.py  learner.py  pipeline.py  prompt_refiner.py
quantcoder/codegen/: __init__.py  multi_file.py
quantcoder/core/: __init__.py  http_utils.py  llm.py  processor.py  qc_linter.py  summary_store.py
quantcoder/evolver/: __init__.py  config.py  engine.py  evaluator.py  persistence.py  variation.py
quantcoder/execution/: __init__.py  parallel_executor.py
quantcoder/llm/: __init__.py  providers.py
quantcoder/mcp/: __init__.py  quantconnect_mcp.py
quantcoder/scheduler/: __init__.py  article_generator.py  automated_pipeline.py  notion_client.py  runner.py
quantcoder/tools/: __init__.py  article_tools.py  base.py  code_tools.py  deep_search.py  file_tools.py
scripts/: quantcoder-mcp
skills/quantcoder-research/: SKILL.md
tests/: __init__.py  conftest.py  test_agents.py  test_autonomous.py  test_config.py  test_deep_search.py  test_evolver.py  test_integration.py  test_library.py  test_llm.py  test_llm_providers.py  test_logging.py  test_mcp.py  test_multi_article.py  test_processor.py  test_qc_linter.py  test_scheduler.py  test_tools.py
